bugfix. col overflow hidden.

--- a/src/market/components/orderBook/style.scss
+++ b/src/market/components/orderBook/style.scss
@@ -67,6 +67,8 @@
       .order-book-col {
         z-index: 1;
         box-sizing: border-box;
+        overflow: hidden;
+
         &.price {
           width: 30%;
           text-align: right;
